增加user svc, 增加user ctrl 修改user 主键为snow, 去除uid
